# github-mcp-extensions

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
src/github_mcp_extensions/: github_api.py  github_web.py  models.py  server.py  suggestion_utils.py
tests/: test_server.py
