[project]
name = "github-mcp-extensions"
version = "0.1.1"
description = "Extended GitHub MCP server — fills gaps in PR review workflows (apply suggestions, dismiss reviews, reactions, enhanced comment IDs)"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
github-mcp-extensions = "github_mcp_extensions.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/github_mcp_extensions"]

[tool.pytest.ini_options]
testpaths = ["tests"]
